Commit before restructuring

--- a/playbooks/linux-config.yaml
+++ b/playbooks/linux-config.yaml
@@ -12,5 +12,7 @@
       apt:
         pkg:
           - tmux
+          - iproute2
+          - tcpdump
+          - iptables
         update_cache: yes
-    # - name: add ssh keys
