--- a/inventory.yaml
+++ b/inventory.yaml
@@ -20,6 +20,9 @@ k3s_cluster:
   children:
     master_nodes:
     worker_nodes:
+  vars:
+    ansible_user: pi
+    k3s_version: 
   
 homelab:
   children:
@@ -27,4 +30,5 @@ homelab:
     other_nodes:
   vars:
     ansible_user: pi
+
    
