--- a/inventory.yaml
+++ b/inventory.yaml
@@ -3,18 +3,23 @@ master_nodes:
     bondsmith: 
       ansible_host: 10.100.0.102
       ansible_user: pi
+  vars:
+    api_endpoint: "{{ hostvars['bondsmith']['ansible_host'] }}"
 
 worker_nodes:
   hosts:
     windrunner:
       ansible_host: 10.100.0.100
+      ansible_user: pi
     lightweaver: 
       ansible_host: 10.100.0.101
+      ansible_user: pi
 
 other_nodes:
   hosts:
     skybreaker: 
       ansible_host: 10.100.0.103
+      ansible_user: pi
 
 k3s_cluster:
   children:
