--- a/roles/k3s_server/tasks/main.yaml
+++ b/roles/k3s_server/tasks/main.yaml
@@ -37,7 +37,7 @@
 - name: Install k3s server
   when: k3s_version_output.rc != 0
   become: yes
-  shell: curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="server" sh -s
+  shell: curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="server" INSTALL_K3S_VERSION="{{ k3s_version }}" sh -s
 
 - name: Add K3s autocomplete to user bashrc
   ansible.builtin.lineinfile:
@@ -51,4 +51,50 @@
     dest: "{{ kubeconfig }}"
     flat: true
 
+- name: Change server address in kubeconfig on control node
+  ansible.builtin.shell: |
+    KUBECONFIG={{ kubeconfig }} kubectl config set-cluster default --server=https://{{ api_endpoint }}:{{ api_port }}
+  delegate_to: 127.0.0.1
+  become: false
+  register: csa_result
+  changed_when:
+    - csa_result.rc == 0
+
+- name: Setup kubectl for {{ ansible_user }} on master node
+  when: user_kubectl
+  block:
+    - name: Create kubectl symlink
+      when: lookup('fileglob', '/usr/local/bin/kubectl', errors='warn') | length == 0
+      ansible.builtin.file:
+        src: /usr/local/bin/k3s
+        dest: /usr/local/bin/kubectl
+        state: link
+
+    - name: Create directory .kube
+      ansible.builtin.file:
+        path: ~{{ ansible_user }}/.kube
+        state: directory
+        owner: "{{ ansible_user }}"
+        mode: "u=rwx,g=rx,o="
+
+    - name: Copy config file to user home directory
+      ansible.builtin.copy:
+        src: /etc/rancher/k3s/k3s.yaml
+        dest: ~{{ ansible_user }}/.kube/config
+        remote_src: true
+        owner: "{{ ansible_user }}"
+        mode: "u=rw,g=,o="
+
+    - name: Configure default KUBECONFIG for user
+      ansible.builtin.lineinfile:
+        path: ~{{ ansible_user }}/.bashrc
+        regexp: 'export KUBECONFIG=~/.kube/config'
+        line: 'export KUBECONFIG=~/.kube/config # Added by k3s-ansible'
+        state: present
+
+    - name: Configure kubectl autocomplete
+      ansible.builtin.lineinfile:
+        path: ~{{ ansible_user }}/.bashrc
+        regexp: '\.\s+<\(kubectl completion bash\)'
+        line: ". <(kubectl completion bash)  # Added by k3s-ansible"
 
