Add the k3s agents and add handlers to restart k3s services when configs change

--- a/roles/k3s_server/tasks/main.yaml
+++ b/roles/k3s_server/tasks/main.yaml
@@ -23,6 +23,7 @@
           disable:
             - servicelb
             - traefik
+  notify: Restart K3S Service 
 
 - name: Get k3s installed version
   ansible.builtin.command: k3s --version
