--- a/playbooks/install.yaml
+++ b/playbooks/install.yaml
@@ -27,13 +27,15 @@
     - smb
 
 - name: Confiure the K3S Nodes
-  hosts: master_nodes
+  hosts: k3s_cluster
   gather_facts: true
   become: true
   roles:
     - k3s_prereq
   tags: 
     - k3s
+    - k3s_server
+    - k3s_agent
 
 - name: Setup K3S Server
   hosts: master_nodes
@@ -43,3 +45,32 @@
     - k3s_server
   tags:
     - k3s
+    - k3s_server
+
+- name: Fetch the cluster token
+  hosts: bondsmith
+  become: true
+  tasks:
+      - name: Fetch the server token
+        command: "cat /var/lib/rancher/k3s/server/token"
+        register: token
+        changed_when: false
+      - name: Set the token fact
+        ansible.builtin.set_fact:
+          k3s_server_token: "{{ token.stdout }}"
+  tags:
+    - k3s_agent
+    - k3s
+
+- name: Setup K3S Agents
+  hosts: worker_nodes
+  gather_facts: true
+  become: true
+  roles:
+    - k3s_agent
+  tags:
+    - k3s
+    - k3s_agent
+  vars:
+    k3s_server_token: "{{ hostvars['bondsmith']['k3s_server_token'] }}"
+    api_endpoint: "{{ hostvars['bondsmith']['ansible_host'] }}"
