--- a/roles/tailscale/tasks/main.yaml
+++ b/roles/tailscale/tasks/main.yaml
@@ -18,6 +18,7 @@
     printf '#!/bin/sh\n\nethtool -K %s rx-udp-gro-forwarding on rx-gro-list off \n' "$(ip route show 0/0 | cut -f5 -d" ")" | sudo tee /etc/networkd-dispatcher/routable.d/50-tailscale
     chmod 755 /etc/networkd-dispatcher/routable.d/50-tailscale
     /etc/networkd-dispatcher/routable.d/50-tailscale
-- name: Activate tailscale
-  become: yes
-  shell: "tailscale up --advertise-exit-node --advertise-routes=192.168.0.0/18,10.100.0.0/18 --accept-dns=false"
+# Requires manual activation
+# - name: Activate tailscale
+#   become: yes
+#   shell: "tailscale up --advertise-exit-node --advertise-routes=192.168.0.0/18,10.100.0.0/18"
